istio01-01-httpbin.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pocsdev
  labels:
    istio-injection: disabled
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: pocsdev
  labels:
    app: httpbin
spec:
  ports:
  - name: http
    port: 8000
  selector:
    app: httpbin

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: pocsdev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
      version: v1
  template:
    metadata:
      labels:
        app: httpbin
        version: v1
    spec:
      containers:
      - image: docker.io/citizenstig/httpbin
        imagePullPolicy: IfNotPresent
        name: httpbin
        ports:
        - containerPort: 8000
